<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/devicesFragment"
        android:name="com.drax.sendit.view.connections.ConnectionsFragment"
        android:label="@string/fragment_devices"
         />

    <fragment
        android:id="@+id/qrFragment"
        android:name="com.drax.sendit.view.qr.QrFragment"
        android:label="@string/fragment_qr"
        >
        <action
            android:id="@+id/qrToScanner"
            app:destination="@id/scannerFragment"
            app:enterAnim="@anim/slide_enter_bottom"
            app:exitAnim="@anim/slide_exit_top"
            app:popEnterAnim="@anim/slide_enter_top"
            app:popExitAnim="@anim/slide_exit_bottom" />
    </fragment>

    <fragment
        android:id="@+id/transmissionsFragment"
        android:name="com.drax.sendit.view.messages.MessagesFragment"
        android:label="@string/fragment_transmitted"
        />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.drax.sendit.view.login.LoginFragment"
        android:label="@string/fragment_login"
         />

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.drax.sendit.view.scanner.ScannerFragment"
        android:label="@string/scanner"
         />


</navigation>