<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="deviceName" type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_16sdp"
        >

        <TextView
            app:layout_constraintBottom_toTopOf="@id/messageContainer"
            android:text="@string/new_invitation"
            android:gravity="center"
            style="@style/heading3"
            android:padding="@dimen/_16sdp"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/messageContainer"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/acceptBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="7"
                android:text="@{@string/new_invitation_desc(deviceName)}"
                android:padding="@dimen/_16sdp"
                style="@style/body_light"
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/icon"
                android:layout_weight="2"
                android:padding="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:src="@drawable/ic_baseline_connect_without_contact_24"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/acceptBtn"
            app:layout_constraintBottom_toTopOf="@id/declineBtn"
            style="@style/buttonColoredActive"
            android:text="@string/new_invitation_accept"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/declineBtn"
            android:background="@drawable/light_button_bg"
            android:text="@string/new_invitation_decline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/closeBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_close_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>