<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.drax.sendit.view.connections.unpair.UnpairUiState" />

        <variable
            name="model"
            type="com.drax.sendit.view.connections.unpair.UnpairVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/unpairTitle"
            style="@style/heading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/unpair"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/shareIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:src="@drawable/ic_baseline_delete_outline_24"
            app:layout_constraintBottom_toBottomOf="@id/shareSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/unpairTitle" />

        <TextView
            android:id="@+id/shareSubtitle"
            style="@style/body_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/unpair_modal_description"
            app:layout_constraintTop_toBottomOf="@id/unpairTitle" />

        <Button
            android:id="@+id/unpairBtn"
            style="@style/negativeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/unpair"
            app:layout_constraintTop_toBottomOf="@id/shareSubtitle" />

        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/grey"
            android:gravity="center"
            android:paddingStart="32dp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="32dp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unpairBtn" />

        <Space
            android:id="@+id/bottomSpace"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/cancelBtn" />

        <include
            layout="@layout/loading_layout"
            app:isShowing="@{model.uiState == UnpairUiState.Loading.INSTANCE}"
            app:layout_constraintBottom_toBottomOf="@id/bottomSpace"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>