<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.drax.sendit.view.qr.QrUiState" />

        <variable
            name="model"
            type="com.drax.sendit.view.qr.QrVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/low_white">

        <ImageView
            android:id="@+id/deviceQrPlaceHolder"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/circle_filled_accent"
            android:padding="32dp"
            android:src="@drawable/ic_add_device_qr_24"
            app:layout_constraintBottom_toBottomOf="@id/deviceQrContainer"
            app:layout_constraintEnd_toEndOf="@id/deviceQrContainer"
            app:layout_constraintStart_toStartOf="@id/deviceQrContainer"
            app:layout_constraintTop_toTopOf="@id/deviceQrContainer" />

        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@id/deviceQrPlaceHolder"
            app:layout_constraintEnd_toEndOf="@id/deviceQrPlaceHolder"
            app:layout_constraintStart_toStartOf="@id/deviceQrPlaceHolder"
            app:layout_constraintTop_toTopOf="@id/deviceQrPlaceHolder" />

        <androidx.cardview.widget.CardView
            android:id="@+id/deviceQrContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:visibility="@{model.qrImageUrl.length() > 0 ? View.VISIBLE: View.GONE}"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="7dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/scanBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3">

            <ImageView
                android:id="@+id/deviceQr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scaleType="fitCenter"
                app:img="@{model.qrImageUrl}" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/qrDesc"
            style="@style/body_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/sf_pro"
            android:text="@string/qr_help_desc"
            app:layout_constraintBottom_toTopOf="@id/scanBtn"
            app:layout_constraintEnd_toEndOf="@id/scanBtn"
            app:layout_constraintStart_toStartOf="@id/scanBtn"
            app:layout_constraintTop_toBottomOf="@id/deviceQrContainer"
            app:layout_constraintVertical_bias=".8" />

        <TextView
            style="@style/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/learn_more"
            app:layout_constraintEnd_toEndOf="@id/qrDesc"
            app:layout_constraintTop_toBottomOf="@id/qrDesc" />

        <Button
            android:id="@+id/scanBtn"
            style="@style/buttonColoredActive"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="32dp"
            android:elevation="7dp"
            android:text="@string/scan"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:src="@drawable/ic_scan_qr"
            app:layout_constraintBottom_toBottomOf="@id/scanBtn"
            app:layout_constraintEnd_toEndOf="@id/scanBtn"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintStart_toStartOf="@id/scanBtn"
            app:layout_constraintTop_toTopOf="@id/scanBtn" />


        <include
            layout="@layout/loading_layout"
            app:isShowing="@{model.uiState == QrUiState.QrLoading.INSTANCE}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>